@@ -2,7 +2,7 @@
 Copyright (C) 2002-10 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 Copyright (C) 2004-15 Christian Franke <smartmontools-support@lists.sourceforge.net>
 
-$Id: smartd.8.in 4047 2015-03-22 16:16:24Z chrfranke $
+$Id: smartd.8.in 4051 2015-04-08 21:20:34Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -414,7 +414,6 @@ forced by SIGUSR1. After a normal check cycle, a file is only rewritten if
 an important change (which usually results in a SYSLOG output) occurred.
 .TP
 .B \-w PATH, \-\-warnexec=PATH
-[NEW EXPERIMENTAL SMARTD FEATURE]
 Run the executable PATH instead of the default script when smartd
 needs to send warning messages.  PATH must point to an executable binary
 file or script.
@@ -791,4 +790,4 @@ Links to these and other documents may be found on the Links page of the
 .SH PACKAGE VERSION
 CURRENT_SVN_VERSION CURRENT_SVN_DATE CURRENT_SVN_REV
 .br
-$Id: smartd.8.in 4047 2015-03-22 16:16:24Z chrfranke $
+$Id: smartd.8.in 4051 2015-04-08 21:20:34Z chrfranke $
