@@ -2,7 +2,7 @@
 Copyright (C) 2002-10 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 Copyright (C) 2004-15 Christian Franke <smartmontools-support@lists.sourceforge.net>
 
-$Id: smartd.conf.5.in 4047 2015-03-22 16:16:24Z chrfranke $
+$Id: smartd.conf.5.in 4051 2015-04-08 21:20:34Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -356,7 +356,6 @@ CAUTION: Specifying \',x\' for a device which does not support it results
 in I/O errors and may disconnect the drive.  The same applies if the specified
 PORT does not exist or is not connected to a disk.
 
-[NEW EXPERIMENTAL SMARTD FEATURE]
 The Prolific PL2507/3507 USB bridges with older firmware support a pass-through
 command similar to JMicron and work with \'\-d usbjmicron,0\'.
 Newer Prolific firmware requires a modified command which can be selected by
@@ -424,8 +423,8 @@ areca_disk_XX with XX in the range from 01 to 24 inclusive.
 Please see the \fBsmartctl\fP(8) man page for further details.
 
 .I areca,N/E
-\- [FreeBSD, Linux, Windows and Cygwin only] [NEW EXPERIMENTAL SMARTD FEATURE] the
-device consists of one or more SATA or SAS disks connected to an Areca SAS RAID controller.
+\- [FreeBSD, Linux, Windows and Cygwin only] the device consists of one
+or more SATA or SAS disks connected to an Areca SAS RAID controller.
 The integer N (range 1 to 128) denotes the channel (slot) and E (range
 1 to 8) denotes the enclosure.
 Important: This requires Areca SAS controller firmware version 1.51 or later.
@@ -455,8 +454,7 @@ Please see the \fBsmartctl\fP(8) man page for further details.
 
 .\" %ENDIF OS FreeBSD Linux
 .I ignore
-\- [NEW EXPERIMENTAL SMARTD FEATURE]
-the device specified by this configuration entry should be ignored.
+\- the device specified by this configuration entry should be ignored.
 This allows to ignore specific devices which are detected by a following
 DEVICESCAN configuration line.
 It may also be used to temporary disable longer multi-line configuration entries.
@@ -860,7 +858,6 @@ below.
 .\" %IF ENABLE_SMARTDPLUGINDIR
 .\" %IF NOT OS Windows
 
-[NEW EXPERIMENTAL SMARTD FEATURE]
 If a word of the comma separated list has the form \'@plugin\', a custom
 script /usr/local/etc/smartd_warning.d/plugin is run and the word is
 removed from the list before sending mail. The string \'plugin\' may be any
@@ -873,9 +870,8 @@ This is handled by the script /usr/local/etc/smartd_warning.sh
 .\" %ENDIF ENABLE_SMARTDPLUGINDIR
 .\" %IF OS Windows
 
-[Windows only] [NEW EXPERIMENTAL SMARTD FEATURE]
-If one of the following words are used as the first address in the
-comma separated list, warning messages are sent via WTSSendMessage().
+[Windows only] If one of the following words are used as the first address
+in the comma separated list, warning messages are sent via WTSSendMessage().
 This displays message boxes on the desktops of the selected sessions.
 Address \'\fBconsole\fP\' specifies the console session only,
 \'\fBactive\fP\' specifies the console session and all active remote
@@ -1122,7 +1118,7 @@ Some sample scripts are also included in
 /usr/local/share/doc/smartmontools/examplescripts/.
 .\" %ENDIF NOT OS Windows
 
-[NEW EXPERIMENTAL SMARTD FEATURE] The executable is run by the script
+The executable is run by the script
 .\" %IF NOT OS Windows
 /usr/local/etc/smartd_warning.sh.
 .\" %ENDIF NOT OS Windows
@@ -1485,7 +1481,6 @@ will do the same, but only monitors the SMART health status of the
 devices, (rather than the default \-a, which monitors all SMART
 properties).
 
-[NEW EXPERIMENTAL SMARTD FEATURE]
 Configuration entries for specific devices may precede the \fBDEVICESCAN\fP entry.
 For example
 .nf
@@ -1576,4 +1571,4 @@ full path of this file.
 .SH PACKAGE VERSION
 CURRENT_SVN_VERSION CURRENT_SVN_DATE CURRENT_SVN_REV
 .br
-$Id: smartd.conf.5.in 4047 2015-03-22 16:16:24Z chrfranke $
+$Id: smartd.conf.5.in 4051 2015-04-08 21:20:34Z chrfranke $
