@@ -1,10 +1,12 @@
-$Id: ChangeLog 4050 2015-04-08 20:35:14Z chrfranke $
+$Id: ChangeLog 4051 2015-04-08 21:20:34Z chrfranke $
 
 2015-04-08  Christian Franke  <franke@computer.org>
 
 	configure.ac: Print 'deprecated' warning if autoconf 2.5x or
 	--with-docdir option is used.
 	Add comments to fix vim syntax coloring.
+	smartctl.8.in, smartd.8.in, smartd.conf.5.in:
+	Remove EXPERIMENTAL notes for features added before 6.3.
 
 2015-03-29  Christian Franke  <franke@computer.org>
 
